# AppSalon

./: .commit-msg.tmp  .env.example  .gitignore  README.md  docker-compose.yml  mikesclub.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  tasks.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  citas.py  galeria.py  profile.py  promos.py  recompensas.py  resenas.py  servicios.py  staff.py  uploads.py
backend/app/core/: config.py  demo_store.py  pg.py  security.py  supabase.py
backend/app/schemas/: cita.py  galeria.py  profile.py  promo.py  recompensa.py  servicio.py  staff.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_schemas.py
db/: 001_schema.sql  002_rls.sql  003_seed.sql  004_guest_bookings.sql  005_promos.sql  README.md
frontend/: .dockerignore  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/features/: equipo.component.ts  galeria.component.ts  landing.component.ts  not-found.component.ts  promociones.component.ts  (+2 more)
frontend/src/environments/: environment.prod.ts  environment.ts
infra/: docker-compose.yml
scripts/: dev.ps1  install.ps1
worker/: .dockerignore  .env.example  Dockerfile  README.md  celery_app.py  config.py  mailer.py  pyproject.toml
worker/tasks/: emails.py  recordatorios.py  sms.py
worker/templates/: bienvenida.html  cita_creada.html  recordatorio.html
(+41 files in other folders)
