[project]
name = "appsalon-worker"
version = "0.1.0"
description = "AppSalon v2 — Celery worker (emails, recordatorios)"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "supabase>=2.9",
    "jinja2>=3.1",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
